--- a/docs/src/styles/main.css
+++ b/docs/src/styles/main.css
@@ -105,17 +105,6 @@ starlight-theme-select {
 #starlight__sidebar details > summary {
   padding: 0.5rem 0;
 }
-h1,
-.sl-markdown-content h2,
-.sl-markdown-content h3,
-.sl-markdown-content h4,
-.sl-markdown-content h5,
-.sl-markdown-content h6,
-.group-label span,
-.right-sidebar-panel h2,
-strong {
-  @apply font-medium;
-}
 
 h1 {
   font-size: 3rem;
@@ -143,10 +132,6 @@ h1 {
   font-weight: 500;
   letter-spacing: -0.005em;
   line-height: 1.5;
-}
-
-p {
-  @apply text-base font-normal tracking-[-0.005em] leading-normal;
 }
 
 .sidebar-content .top-level > li > details > summary {
@@ -192,10 +177,6 @@ p {
 .sidebar-content .top-level li details ul li details ul li a {
   padding-block: 0.4rem;
   border-radius: 4px;
-}
-
-.sidebar-content {
-  @apply bg-white dark:bg-black;
 }
 
 .sidebar-content {
@@ -357,15 +338,6 @@ starlight-toc > nav > ul > li > a > span {
   @apply text-sm;
 }
 
-starlight-menu-button button,
-starlight-menu-button[aria-expanded="true"] button {
-  @apply bg-transparent;
-}
-
-button[aria-controls="starlight__sidebar"] {
-  @apply shadow-none;
-}
-
 button[aria-controls="starlight__sidebar"] svg {
   transform: scale(1.5);
 }
@@ -417,7 +389,6 @@ ol + ol li blockquote {
   padding: 0px 5px;
   font-size: 13px;
   color: white;
-  border-width: 6px 10px;
 }
 
 sl-sidebar-state-persist > ul > li:nth-child(2) > details > summary,
@@ -530,4 +501,37 @@ sl-sidebar-state-persist > ul > li:nth-child(3) > details > summary > svg {
     --sl-badge-danger-bg: #b80e0e;
     --sl-badge-danger-border: #3b0d0d;
     --sl-badge-danger-text: #fff;
+}
+
+
+.input:focus,
+.button:focus,
+.input:focus-visible,
+.button:focus-visible{
+	outline: 2px solid var(--sl-color-accent);
+	border-radius: 2px;
+}
+
+.input, .button {
+  background-color: var(--sl-color-bg-nav);
+	padding: 5px 10px;
+}
+
+.button {
+	margin: 5px;
+	border: 1px solid var(--sl-color-accent);
+	&:hover {
+		background-color: var(--sl-color-accent);
+		color: var(--sl-color-white);
+	}
+}
+
+.input:disabled, .button:disabled {
+	background-color: rgba(128, 128, 128, 0.181);
+	border-color: rgba(150, 150, 150, 0.249);
+	color: rgba(150, 150, 150, 0.249);
+}
+
+.no_margin {
+  margin: 0!important;
 }
