--- a/docs/src/components/Header.astro
+++ b/docs/src/components/Header.astro
@@ -1,12 +1,10 @@
 ---
-import config from 'virtual:starlight/user-config';
-import type { Props } from '../props';
-
 import LanguageSelect from 'virtual:starlight/components/LanguageSelect';
 import Search from 'virtual:starlight/components/Search';
 import SiteTitle from 'virtual:starlight/components/SiteTitle';
 import SocialIcons from 'virtual:starlight/components/SocialIcons';
-import ThemeSelect from './ThemeSelect.astro';
+import config from 'virtual:starlight/user-config';
+import { PreactThemeSelect } from './PreactThemeSelect';
 
 /**
  * Render the `Search` component if Pagefind is enabled or the default search component has been overridden.
@@ -25,7 +23,7 @@ const shouldRenderSearch = config.pagefind || config.components.Search !== '@ast
 		<div class="sl-flex social-icons">
 			<SocialIcons {...Astro.props} />
 		</div>
-        <ThemeSelect client:load {...Astro.props}  />
+        <PreactThemeSelect client:load  />
 		<LanguageSelect {...Astro.props} />
 	</div>
 </div>
