--- a/docs/src/components/Footer.astro
+++ b/docs/src/components/Footer.astro
@@ -1,13 +1,13 @@
 ---
+import authorsJson from '@data/authors.json';
 import { Fragment } from 'preact';
-import { getAuthors } from '../plugins/authors';
-const authors = await getAuthors(`src/content/docs/${Astro.props.id}`);
+const authors = authorsJson[Astro.props.id] || [];
 const editURL = Astro.props.editUrl?.toString();
 ---
 
 <footer class="sl-flex">
 	{editURL && <a href={editURL} target="_blank" rel="noopener noreferrer" class="edit_this_page">Edit this page</a>}
-	{editURL && " / "}
+	{editURL && authors.length > 0 && " / "}
 	{authors.length > 0 && <div class="credits-list">Page edited by {authors.join(", ")}</div>}
 </footer>
 
@@ -20,7 +20,5 @@ const editURL = Astro.props.editUrl?.toString();
 		display: flex;
 		flex-wrap: wrap;
 		gap: 0.5rem;
-		color: var(--cream);
-		
 	}
 </style>
