--- a/docs/src/styles/main.css
+++ b/docs/src/styles/main.css
@@ -3,22 +3,22 @@
 	color: light-dark(var(--dark-brown), #f4ddcb );
 }
 
-[data-theme="light"] {
-	 scrollbar-color: var(--cream) #fff;
-}
-
 .sidebar  {
 	summary, a {
 		color: var(--light-brown);
 	}
 
 	summary:hover, a:hover {
-		color: var(--dark-brown);
+		color: light-dark(var(--dark-brown), #f4ddcb );
 	}
 
 	[aria-current=page] {
 		color: var(--dark-brown);
 		background-color:  light-dark(var(--cream), var(--cream));
+	}
+
+  [aria-current=page]:hover {
+		color: var(--sl-color-accent);
 	}
 }
 
@@ -30,10 +30,13 @@
   --cream: #dcc4b1;
   --dark-brown: #1f1611;
 	
-	--sl-color-text-accent: light-dark(black, white);
-	--sl-icon-color: light-dark(red, var(--cream));
-	--secondary-bg-color: light-dark(red, #221f1e );
+	--sl-color-text-accent: light-dark(red, #c88440);
+	--sl-color-accent: light-dark(red, #c88440);
+
+  --sl-icon-color: light-dark(var(--dark-brown), var(--cream));
+	--secondary-bg-color: light-dark(var(--cream), #221f1e );
 	--secondary-text-color: light-dark(black, white);
+  --sl-color-text:  light-dark(var(--dark-brown), #cda988);
 
   --sl-color-accent-low: #4e2d1e;
   --sl-color-accent: #3e2317;
@@ -48,8 +51,6 @@
   --sl-color-gray-6: #1f1611;
   --sl-color-black: #130e0b;
   --sl-nav-pad-x: 1rem;
-  --sl-color-text-accent: #c88440;
-  --sl-color-text: #cda988;
   --sl-font: "Inter", sans-serif; 
   --sl-nav-pad-x: 1rem;
   --sl-font: "Inter", sans-serif; 
@@ -62,6 +63,12 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+:root[data-theme='light'] {
+	--sl-color-text-accent: var(--light-brown);
+	--sl-color-accent:  var(--light-brown);
+	 scrollbar-color: var(--cream) #fff;
 }
 
 body {
@@ -519,8 +526,6 @@ sl-sidebar-state-persist > ul > li:nth-child(3) > details > summary > svg {
      background: rgb(50, 50, 55);
   }
 }
-
-
 
 .sl-badge {
   font-family: "Inter", sans-serif;
