--- a/docs/src/styles/main.css
+++ b/docs/src/styles/main.css
@@ -36,20 +36,56 @@
 	--dark-brown: #1f1611;
 	--verydark-brown: #100e0c;
 
-	--sl-color-text-accent: light-dark(red, #c88440);
-	--sl-color-accent: light-dark(red, #c88440);
+	--sl-nav-pad-x: 1rem;
+	--sl-font: "Inter", sans-serif;
+	--sl-content-width: 55rem;
+	--sl-color-hairline-light: rgba(0, 0, 0, 0);
 
-	--sl-icon-color: light-dark(var(--dark-brown), var(--cream));
-	--secondary-bg-color: light-dark(var(--cream), #221f1e);
-	--secondary-text-color: light-dark(black, white);
-	--sl-color-text: light-dark(var(--dark-brown), #cda988);
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
 
-	--sl-color-accent-input: light-dark(var(--cream), #cda988);
-	--sl-color-bg-input: light-dark(var(--cream), var(--medium-brown));
-	--color-input-bg-hover: light-dark(var(--light-brown), #4b3529);
+:root,
+:root[data-theme="light"] {
+	color-scheme: light;
+	--sl-color-text: var(--dark-brown);
+	--sl-color-text-accent: var(--light-brown);
+	--sl-color-accent: var(--light-brown);
+	--sl-icon-color: var(--dark-brown);
+	--secondary-bg-color: var(--cream);
+	--secondary-text-color: var(--dark-brown);
+	--sl-color-accent-input: var(--cream);
+	--sl-color-bg-input: var(--cream);
+	--color-input-bg-hover: var(--light-brown);
+	--sl-color-accent-low: #f4ddcb;
+	--sl-color-accent-high: var(--dark-brown);
+	--sl-color-bg-nav: var(--cream);
+	--sl-color-white: #ffffff;
+	--sl-color-gray-1: #f3dfcf;
+	--sl-color-gray-2: #e3c8b0;
+	--sl-color-gray-3: #d3b196;
+	--sl-color-gray-4: #c09278;
+	--sl-color-gray-5: #a3785e;
+	--sl-color-gray-6: #7e5a45;
+	--sl-color-black: #31231c;
+	--sl-color-bg-inline-code: #f0e4d8;
+	scrollbar-color: var(--cream) #fff;
+}
 
+:root[data-theme="dark"] {
+	color-scheme: dark;
+	--sl-color-text: #cda988;
+	--sl-color-text-accent: #c88440;
+	--sl-color-accent: #c88440;
+	--sl-icon-color: var(--cream);
+	--secondary-bg-color: #221f1e;
+	--secondary-text-color: #ffffff;
+	--sl-color-accent-input: #cda988;
+	--sl-color-bg-input: var(--medium-brown);
+	--color-input-bg-hover: #4b3529;
 	--sl-color-accent-low: #4e2d1e;
-	--sl-color-accent: #3e2317;
 	--sl-color-accent-high: #e5c9a8;
 	--sl-color-bg-nav: #1f1611;
 	--sl-color-white: #dcc4b1;
@@ -60,19 +96,8 @@
 	--sl-color-gray-5: #3e2317;
 	--sl-color-gray-6: #1f1611;
 	--sl-color-black: #130e0b;
-	--sl-nav-pad-x: 1rem;
-	--sl-font: "Inter", sans-serif;
-	--sl-nav-pad-x: 1rem;
-	--sl-font: "Inter", sans-serif;
 	--sl-color-bg-inline-code: #3d362f;
-	--sl-content-width: 55rem;
-
-	--sl-color-hairline-light: rgba(0, 0, 0, 0);
-
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	scrollbar-color: var(--sl-color-gray-5) var(--verydark-brown);
 }
 
 :root[data-theme="light"] {
