--- a/docs/src/styles/main.css
+++ b/docs/src/styles/main.css
@@ -1,28 +1,12 @@
 @import "tailwindcss";
+@import "./custom-components.css";
+@import "./markdown.css";
+@import "./utils.css";
+@import "./sidebar.css";
+@import "./toc.css";
 
 .site-title {
 	color: light-dark(var(--dark-brown), #f4ddcb);
-}
-
-.sidebar {
-	summary,
-	a {
-		color: var(--light-brown);
-	}
-
-	summary:hover,
-	a:hover {
-		color: light-dark(var(--dark-brown), #f4ddcb);
-	}
-
-	[aria-current="page"] {
-		color: var(--dark-brown);
-		background-color: light-dark(var(--cream), var(--cream));
-	}
-
-	[aria-current="page"]:hover {
-		color: var(--sl-color-accent);
-	}
 }
 
 :root {
@@ -50,6 +34,7 @@
 :root,
 :root[data-theme="light"] {
 	color-scheme: light;
+
 	--sl-color-text: var(--dark-brown);
 	--sl-color-text-accent: var(--light-brown);
 	--sl-color-accent: var(--light-brown);
@@ -61,17 +46,28 @@
 	--color-input-bg-hover: var(--light-brown);
 	--sl-color-accent-low: #f4ddcb;
 	--sl-color-accent-high: var(--dark-brown);
-	--sl-color-bg-nav: var(--cream);
-	--sl-color-white: #ffffff;
-	--sl-color-gray-1: #f3dfcf;
-	--sl-color-gray-2: #e3c8b0;
+	--sl-color-bg-nav: #f1d2b2;
+	--sl-color-white: #000000;
+	--sl-color-gray-1: #000000;
+	--sl-color-gray-2: #000000;
 	--sl-color-gray-3: #d3b196;
 	--sl-color-gray-4: #c09278;
 	--sl-color-gray-5: #a3785e;
 	--sl-color-gray-6: #7e5a45;
-	--sl-color-black: #31231c;
+	--sl-color-black: #ffffff2c;
 	--sl-color-bg-inline-code: #f0e4d8;
-	scrollbar-color: var(--cream) #fff;
+
+	--sl-color-bg: #f2eeea;
+	--sl-color-bg-sidebar: var(--cream);
+
+	--selected-page-bg: #f1d2b2;
+	--selected-page-text: #000000;
+	--sidebar-text-color: #150e06;
+	--sidebar-header-text-color: var(--verydark-brown);
+
+	--header-color: #513f2a;
+
+	scrollbar-color: var(--cream) #14131367;
 }
 
 :root[data-theme="dark"] {
@@ -87,7 +83,7 @@
 	--color-input-bg-hover: #4b3529;
 	--sl-color-accent-low: #4e2d1e;
 	--sl-color-accent-high: #e5c9a8;
-	--sl-color-bg-nav: #1f1611;
+	--sl-color-bg-nav: #120a07;
 	--sl-color-white: #dcc4b1;
 	--sl-color-gray-1: #b8987a;
 	--sl-color-gray-2: #a3785e;
@@ -97,18 +93,24 @@
 	--sl-color-gray-6: #1f1611;
 	--sl-color-black: #130e0b;
 	--sl-color-bg-inline-code: #3d362f;
-	scrollbar-color: var(--sl-color-gray-5) var(--verydark-brown);
-}
 
-:root[data-theme="light"] {
-	--sl-color-text-accent: var(--light-brown);
-	--sl-color-accent: var(--light-brown);
-	scrollbar-color: var(--cream) #fff;
+	--sl-color-bg: var(--verydark-brown);
+	--sl-color-bg-sidebar: var(--dark-brown);
+
+	--selected-page-bg: #0b0804;
+	--selected-page-text: #f4dac3;
+	--sidebar-text-color: var(--light-brown);
+	--sidebar-header-text-color: var(--cream);
+
+	--header-color: var(--cream);
+
+	scrollbar-color: rgba(152, 106, 74, 0.525) #15120f;
 }
 
 .theme-toggle {
 	fill: var(--sl-icon-color);
 	color: var(--sl-icon-color);
+	cursor: pointer;
 }
 
 body {
@@ -119,24 +121,12 @@ starlight-menu-button > button {
 	background-color: transparent;
 }
 
-.sidebar {
-	font-weight: bold;
-}
-
 .sl-container:where(.astro-7nkwcw3z) {
 	--sl-content-margin-inline: 30px 0;
 }
 
-.sidebar ul li {
-	font-weight: normal;
-}
-
 .main-pane {
 	font-size: 14px;
-}
-
-starlight-toc > nav > ul a[aria-current="true"] {
-	color: var(--sl-color-gray-1);
 }
 
 .sl-markdown-content aside:not(.not-content),
@@ -150,8 +140,14 @@ starlight-toc > nav > ul a[aria-current="true"] {
 .social-icons::after {
 	display: none;
 }
-#starlight__sidebar details > summary {
-	padding: 0.5rem 0;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	color: var(--header-color);
 }
 
 h1 {
@@ -160,131 +156,8 @@ h1 {
 	letter-spacing: -0.03em;
 }
 
-.sl-markdown-content h2 {
-	font-size: 2.4rem;
-	font-weight: 500;
-	letter-spacing: -0.02em;
-	line-height: 1.33333;
-	margin-top: 0.7em !important;
-}
-
-.sl-markdown-content h3 {
-	font-size: 1.25rem;
-	font-weight: 500;
-	letter-spacing: -0.01em;
-	line-height: 1.2;
-}
-
-.sl-markdown-content h4 {
-	font-size: 1rem;
-	font-weight: 500;
-	letter-spacing: -0.005em;
-	line-height: 1.5;
-}
-
-.sidebar-content .top-level > li > details > summary {
-	padding: 0.625rem 0;
-}
-
-.sidebar-content .top-level > li > details > ul {
-	padding-inline-start: 0;
-	margin-block-end: 0.5rem;
-}
-
-.sidebar-content .top-level > li > details > ul > li {
-	border-inline-start: 0;
-	margin-inline-start: 0;
-	padding-block: 0;
-	padding-inline: 0;
-}
-
-.sidebar-content .top-level > li > details > ul > li > details > summary {
-	border-inline-start: 0;
-	margin-inline-start: 0;
-	padding: 0.5rem 0;
-}
-
-.sidebar-content .top-level li details ul li {
-	margin-inline: 0;
-	padding-inline-end: 0;
-	padding-inline-start: 0;
-	position: relative;
-	position: relative;
-}
-
-.sidebar-content .top-level li details ul li a {
-	padding-block: 0.4rem;
-	padding-inline-start: 0.75rem;
-	border-radius: 4px;
-}
-.sidebar-content .top-level li details ul li details {
-	padding-inline-start: 0.75rem;
-	border-radius: 4px;
-}
-
-.sidebar-content .top-level li details ul li details ul li a {
-	padding-block: 0.4rem;
-	border-radius: 4px;
-}
-
-.sidebar-content {
-	padding-inline-start: var(--sl-nav-pad-x);
-}
-
-.sidebar-content
-	> .top-level
-	> li
-	> details
-	> summary
-	> div.group-label
-	> span {
-	font-size: 1rem;
-}
-
-.sidebar-content > ul > li > details > ul > li > details > summary > svg {
-	color: #bbb;
-}
-
-.sidebar-content details > summary > svg {
-	transform: rotateZ(90deg);
-	transition: none;
-}
-
-.sidebar-content details[open] > summary > svg {
-	transform: rotateZ(270deg);
-}
-
-.right-sidebar-container {
-	width: var(--sl-sidebar-width);
-}
-
-.right-sidebar {
-	border-inline-start: none;
-}
-
-.right-sidebar-panel h2 {
-	font-size: 1rem;
-	margin-block-end: 1.5rem;
-}
-
-.sl-markdown-content
-	:not(h1, h2, h3, h4, h5, h6)
-	+ :is(h1, h2, h3, h4, h5, h6):not(:where(.not-content *)) {
-	margin-block-start: 1.5em;
-}
-
 .content-panel + .content-panel {
 	border-top: 0;
-}
-
-starlight-toc > nav > ul {
-	display: flex;
-	flex-direction: column;
-	gap: 0.5rem;
-}
-
-starlight-toc > nav > ul > li > a > span {
-	font-size: 0.875rem;
 }
 
 .social-icons a {
@@ -306,18 +179,6 @@ starlight-toc > nav > ul > li > a > span {
 
 	.sidebar-pane {
 		border-inline-end: none;
-	}
-}
-
-@media (min-width: 90rem) {
-	.right-sidebar-panel {
-		max-width: calc(var(--sl-sidebar-width) - var(--sl-nav-pad-x));
-		padding-inline-end: 0;
-		display: flex;
-	}
-
-	.right-sidebar-panel .sl-container {
-		max-width: calc(var(--sl-sidebar-width) - var(--sl-nav-pad-x));
 	}
 }
 
@@ -353,12 +214,6 @@ starlight-toc > nav > ul > li > a > span {
 	@apply pl-0;
 }
 
-.sl-markdown-content ol,
-.sl-markdown-content ul {
-	list-style-type: disc;
-	padding-inline-start: 40px;
-}
-
 starlight-tabs ul,
 starlight-tabs ol {
 	list-style-type: none !important;
@@ -367,15 +222,6 @@ starlight-tabs ol {
 
 .table-wrapper {
 	@apply w-full block whitespace-normal overflow-x-auto;
-}
-
-.sl-markdown-content .table-2-cols {
-	@apply w-1/2;
-}
-
-.sl-markdown-content td.table-3-cols,
-.sl-markdown-content th.table-3-cols {
-	@apply w-1/3;
 }
 
 .table-4-cols {
@@ -388,30 +234,6 @@ starlight-tabs ol {
 
 .table-6-cols {
 	@apply w-1/6;
-}
-
-.sl-markdown-content
-	:is(th:first-child, td:first-child):not(:where(.not-content *)) {
-	@apply pl-4;
-}
-
-.sl-markdown-content
-	:is(th:last-child, td:last-child):not(:where(.not-content *)) {
-	@apply pr-4;
-}
-
-.sl-markdown-content th {
-	background-color: light-dark(var(--cream), var(--medium-brown));
-	padding: 0.75rem 1rem;
-	@apply font-bold;
-}
-
-.sl-markdown-content td {
-	@apply text-sm;
-}
-
-button[aria-controls="starlight__sidebar"] svg {
-	transform: scale(1.5);
 }
 
 body.DocSearch--active .c-help-widget,
@@ -428,201 +250,8 @@ ol + ol li blockquote {
 	margin-inline-start: 20px;
 }
 
-.osrs_item {
-	background-color: var(--secondary-bg-color);
-	color: var(--secondary-text-color);
-	width: max-content;
-	display: flex;
-	border-radius: 10px;
-	align-items: center;
-	justify-content: center;
-	align-content: center;
-	padding: 3px 9px;
-	font-size: 13px;
-	gap: 5px;
-	font-weight: bold;
-}
-
-.osrs_item_name,
-.osrs_item_image,
-.osrs_item_name a {
-	margin: 0 !important;
-	text-decoration: none !important;
-}
-
-.discord_command_copy {
-	background-color: #4e538f;
-	width: auto;
-	display: inline-flex;
-	align-items: center;
-	vertical-align: middle;
-	justify-content: center;
-	align-content: center;
-	padding: 0px 5px;
-	font-size: 13px;
-	color: white;
-	border-radius: 6px;
-	cursor: pointer;
-	transition: background 0.2s;
-	margin: 0 2px;
-	white-space: nowrap;
-}
-
-.discord_command_copy:hover {
-	background: #6a6fcf;
-}
-
-.discord_command_copy.copied {
-	background: #3cb371;
-}
-sl-sidebar-state-persist > ul > li:nth-child(2) > details > summary,
-sl-sidebar-state-persist > ul > li:nth-child(3) > details > summary {
-	text-align: center;
-	justify-content: center;
-}
-
-sl-sidebar-state-persist > ul > li:nth-child(2) > details > summary > svg,
-sl-sidebar-state-persist > ul > li:nth-child(3) > details > summary > svg {
-	display: none;
-}
-
-/* Make Getting-Started section look like its at top level */
-#starlight__sidebar
-	> div
-	> sl-sidebar-state-persist
-	> ul
-	> li:nth-child(1)
-	> details
-	> summary {
-	display: none;
-}
-#starlight__sidebar
-	> div
-	> sl-sidebar-state-persist
-	> ul
-	> li:nth-child(1)
-	> details
-	> ul {
-	padding: 0;
-}
-
-.sl-markdown-content .injected {
-	display: inline;
-	gap: 8px;
-	white-space: normal;
-	margin-top: 0px;
-}
-
-.osrs_item,
-.discord_command_copy {
-	display: inline-flex;
-	align-items: center;
-	vertical-align: middle;
-	margin-top: 0px !important;
-	margin-left: 3px;
-	margin-right: 3px;
-}
-
-.osrs_item_image {
-	display: inline !important;
-	max-height: 21px;
-	vertical-align: middle;
-}
-
-.osrs_item_image_full {
-	max-height: unset;
-}
-
-.osrs_item_name,
-.discord_command_copy {
-	font-size: 0.9em;
-	text-align: center;
-	white-space: nowrap;
-}
-
-.contributor {
-	width: max-content;
-	border-radius: 8px;
-	color: var(--sl-color-text-accent);
-	font-weight: bold;
-	padding: 1px 9px;
-	font-size: 25px;
-	display: flex;
-	gap: 8px;
-	align-items: center;
-	justify-content: center;
-	justify-items: center;
-
-	background: #ff803c14;
-	color: #ff7f3c;
-	padding: 5px 9px;
-}
-
-.contributor .contributor_name {
-	margin-top: 0;
-	font-weight: 500;
-}
-
-.contributor_avatar {
-	height: 29px !important;
-	border-radius: 64px;
-	margin-right: 3px;
-}
-
-.contributor_small {
-	display: inline-flex;
-	width: max-content;
-	border-radius: 10px;
-	align-items: center;
-	justify-content: center;
-	align-content: center;
-	padding: 3px 9px;
-	padding-left: 1px;
-	font-size: 13px;
-	gap: 5px;
-	font-weight: bold;
-	align-items: center;
-	vertical-align: middle;
-	margin-top: 0px !important;
-	margin-left: 3px;
-	margin-right: 3px;
-	margin: 0 !important;
-	position: relative;
-
-	background: #ff803c14;
-	color: #ff7f3c;
-
-	.contributor_avatar {
-		height: 20px !important;
-	}
-}
-
 .edit_this_page {
 	color: var(--sl-color-text-accent);
-}
-
-#starlight__sidebar .group-label {
-	text-transform: capitalize;
-}
-
-.discord_channel {
-	font-size: 16px;
-	font-weight: 500;
-	background: #35373c;
-	width: max-content;
-	padding: 3px 10px;
-	font-size: 13.4px;
-	color: #81868f !important;
-	display: flex;
-	align-items: center;
-	border-radius: 4px;
-	text-decoration: none;
-
-	&:hover {
-		color: rgb(192, 192, 192) !important;
-		cursor: pointer;
-		background: rgb(50, 50, 55);
-	}
 }
 
 .sl-badge {
@@ -663,33 +292,6 @@ sl-sidebar-state-persist > ul > li:nth-child(3) > details > summary > svg {
 	background-color: rgba(128, 128, 128, 0.181);
 	border-color: rgba(150, 150, 150, 0.249);
 	color: rgba(150, 150, 150, 0.249);
-}
-
-.no_margin {
-	margin: 0 !important;
-}
-
-.text-xxs {
-	font-size: 10px;
-}
-
-.sl-markdown-content
-	li
-	> :last-child:not(li, ul, ol):not(
-		a,
-		strong,
-		em,
-		del,
-		span,
-		input,
-		:where(.not-content *)
-	) {
-	margin-bottom: 0 !important;
-}
-
-.ca-complete {
-	background: #e6f7e6 !important;
-	color: #225c22 !important;
 }
 
 :root[data-theme="dark"] .ca-complete {
