--- a/docs/src/styles/main.css
+++ b/docs/src/styles/main.css
@@ -299,6 +299,9 @@ ol + ol li blockquote {
 	color: #b8ffcc !important;
 }
 
+.ca-table td {
+	vertical-align: top;
+}
 starlight-tabs {
 	[role="tablist"] {
 		text-transform: capitalize;
