--- a/docs/src/styles/custom-components.css
+++ b/docs/src/styles/custom-components.css
@@ -18,81 +18,6 @@
 	}
 }
 
-.osrs_item {
-	background-color: var(--secondary-bg-color);
-	color: var(--secondary-text-color);
-	width: max-content;
-	display: flex;
-	border-radius: 10px;
-	align-items: center;
-	justify-content: center;
-	align-content: center;
-	padding: 3px 9px;
-	font-size: 13px;
-	gap: 5px;
-	font-weight: bold;
-}
-
-.osrs_item_name,
-.osrs_item_image,
-.osrs_item_name a {
-	margin: 0 !important;
-	text-decoration: none !important;
-}
-
-.discord_command_copy {
-	background-color: #4e538f;
-	width: auto;
-	display: inline-flex;
-	align-items: center;
-	vertical-align: middle;
-	justify-content: center;
-	align-content: center;
-	padding: 0px 5px;
-	font-size: 13px;
-	color: white;
-	border-radius: 6px;
-	cursor: pointer;
-	transition: background 0.2s;
-	margin: 0 2px;
-	white-space: nowrap;
-}
-
-.discord_command_copy:hover {
-	background: #6a6fcf;
-}
-
-.discord_command_copy.copied {
-	background: #3cb371;
-}
-
-.osrs_item,
-.discord_command_copy {
-	display: inline-flex;
-	align-items: center;
-	vertical-align: middle;
-	margin-top: 0px !important;
-	margin-left: 3px;
-	margin-right: 3px;
-}
-
-.osrs_item_image {
-	display: inline !important;
-	max-height: 21px;
-	vertical-align: middle;
-}
-
-.osrs_item_image_full {
-	max-height: unset;
-}
-
-.osrs_item_name,
-.discord_command_copy {
-	font-size: 0.9em;
-	text-align: center;
-	white-space: nowrap;
-}
-
 .contributor {
 	width: max-content;
 	border-radius: 8px;
@@ -153,4 +78,73 @@
 .ca-complete {
 	background: #e6f7e6 !important;
 	color: #225c22 !important;
+}
+
+/* Discord Commands */
+.discord_command_copy {
+	margin-top: 0px !important;
+	text-align: center;
+	background-color: light-dark(#6b72c7, #4e538f);
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0px 5px;
+	font-size: 13px;
+	color: white;
+	border-radius: 6px;
+	cursor: pointer;
+	transition: background 0.2s;
+	margin: 0 2px;
+	white-space: nowrap;
+}
+
+.discord_command_copy:hover {
+	background: #6a6fcf;
+}
+
+.discord_command_copy.copied {
+	background: #3cb371;
+}
+
+/* Items */
+
+.osrs_item {
+	background-color: light-dark(#c7b69d, #2d2924);
+	color: light-dark(#382412, #ecd0b7);
+
+	width: max-content;
+	border-radius: 10px;
+	justify-content: center;
+	padding: 1px 9px;
+	gap: 5px;
+	font-weight: bold;
+	display: inline-flex;
+	align-items: center;
+	vertical-align: middle;
+	margin-top: 0px !important;
+	margin-left: 3px;
+	margin-right: 3px;
+}
+
+.bso_item {
+	background-color: light-dark(#b39dc7, #59516d9d);
+}
+
+.osrs_item_image {
+	display: inline !important;
+	vertical-align: middle;
+	zoom: 0.75;
+	padding: 3px 0px;
+}
+
+.osrs_item_image_full {
+	max-height: unset;
+}
+
+.osrs_item_name {
+	margin: 0 !important;
+	text-decoration: none !important;
+	font-size: 1em;
+	text-align: center;
+	white-space: nowrap;
 }
