--- a/docs/src/fonts/font-face.css
+++ b/docs/src/fonts/font-face.css
@@ -1,5 +1,5 @@
 @font-face {
-	font-family: InterVariable;
+	font-family: "InterVariable";
 	font-style: normal;
 	font-weight: 100 900;
 	font-display: swap;
@@ -7,7 +7,7 @@
 		format("woff2");
 }
 @font-face {
-	font-family: InterVariable;
+	font-family: "InterVariable";
 	font-style: italic;
 	font-weight: 100 900;
 	font-display: swap;
