--- a/docs/src/fonts/font-face.css
+++ b/docs/src/fonts/font-face.css
@@ -3,16 +3,14 @@
 	font-style: normal;
 	font-weight: 100 900;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterVariable.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterVariable.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterVariable";
 	font-style: italic;
 	font-weight: 100 900;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterVariable-Italic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterVariable-Italic.woff2") format("woff2");
 }
 
 /* static fonts */
@@ -21,286 +19,250 @@
 	font-style: normal;
 	font-weight: 100;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Thin.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Thin.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: italic;
 	font-weight: 100;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-ThinItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-ThinItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: normal;
 	font-weight: 200;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-ExtraLight.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-ExtraLight.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: italic;
 	font-weight: 200;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-ExtraLightItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-ExtraLightItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: normal;
 	font-weight: 300;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Light.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Light.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: italic;
 	font-weight: 300;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-LightItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-LightItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Regular.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Regular.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: italic;
 	font-weight: 400;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Italic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Italic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: normal;
 	font-weight: 500;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Medium.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Medium.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: italic;
 	font-weight: 500;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-MediumItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-MediumItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: normal;
 	font-weight: 600;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-SemiBold.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-SemiBold.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: italic;
 	font-weight: 600;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-SemiBoldItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-SemiBoldItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: normal;
 	font-weight: 700;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Bold.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Bold.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: italic;
 	font-weight: 700;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-BoldItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-BoldItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: normal;
 	font-weight: 800;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-ExtraBold.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-ExtraBold.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: italic;
 	font-weight: 800;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-ExtraBoldItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-ExtraBoldItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: normal;
 	font-weight: 900;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Black.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-Black.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter";
 	font-style: italic;
 	font-weight: 900;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-BlackItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/Inter-BlackItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: normal;
 	font-weight: 100;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Thin.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Thin.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: italic;
 	font-weight: 100;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-ThinItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-ThinItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: normal;
 	font-weight: 200;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-ExtraLight.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-ExtraLight.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: italic;
 	font-weight: 200;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-ExtraLightItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-ExtraLightItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: normal;
 	font-weight: 300;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Light.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Light.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: italic;
 	font-weight: 300;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-LightItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-LightItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Regular.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Regular.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: italic;
 	font-weight: 400;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Italic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Italic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: normal;
 	font-weight: 500;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Medium.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Medium.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: italic;
 	font-weight: 500;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-MediumItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-MediumItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: normal;
 	font-weight: 600;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-SemiBold.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-SemiBold.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: italic;
 	font-weight: 600;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-SemiBoldItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-SemiBoldItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: normal;
 	font-weight: 700;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Bold.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Bold.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: italic;
 	font-weight: 700;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-BoldItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-BoldItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: normal;
 	font-weight: 800;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-ExtraBold.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-ExtraBold.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: italic;
 	font-weight: 800;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-ExtraBoldItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-ExtraBoldItalic.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: normal;
 	font-weight: 900;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Black.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-Black.woff2") format("woff2");
 }
 @font-face {
 	font-family: "InterDisplay";
 	font-style: italic;
 	font-weight: 900;
 	font-display: swap;
-	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-BlackItalic.woff2")
-		format("woff2");
+	src: url("https://cdn.oldschool.gg/fonts/inter/InterDisplay-BlackItalic.woff2") format("woff2");
 }
