--- a/docs/src/styles/custom-components.css
+++ b/docs/src/styles/custom-components.css
@@ -1,5 +1,4 @@
 .discord_channel {
-	font-size: 16px;
 	font-weight: 500;
 	background: #35373c;
 	width: max-content;
@@ -23,7 +22,6 @@
 	border-radius: 8px;
 	color: var(--sl-color-text-accent);
 	font-weight: bold;
-	padding: 1px 9px;
 	font-size: 25px;
 	display: flex;
 	gap: 8px;
@@ -32,7 +30,6 @@
 	justify-items: center;
 
 	background: #ff803c14;
-	color: #ff7f3c;
 	padding: 5px 9px;
 }
 
@@ -59,12 +56,8 @@
 	font-size: 13px;
 	gap: 5px;
 	font-weight: bold;
-	align-items: center;
 	vertical-align: middle;
-	margin-top: 0px !important;
-	margin-left: 3px;
-	margin-right: 3px;
-	margin: 0 !important;
+	margin: 0;
 	position: relative;
 
 	background: #ff803c14;
@@ -82,7 +75,6 @@
 
 /* Discord Commands */
 .discord_command_copy {
-	margin-top: 0px !important;
 	text-align: center;
 	background-color: light-dark(#6b72c7, #4e538f);
 	display: inline-flex;
@@ -142,7 +134,6 @@
 }
 
 .osrs_item_name {
-	margin: 0 !important;
 	text-decoration: none !important;
 	font-size: 1em;
 	text-align: center;
