--- a/docs/src/styles/markdown.css
+++ b/docs/src/styles/markdown.css
@@ -13,13 +13,11 @@
 	@apply w-1/3;
 }
 
-.sl-markdown-content
-	:is(th:first-child, td:first-child):not(:where(.not-content *)) {
+.sl-markdown-content :is(th:first-child, td:first-child):not(:where(.not-content *)) {
 	@apply pl-4;
 }
 
-.sl-markdown-content
-	:is(th:last-child, td:last-child):not(:where(.not-content *)) {
+.sl-markdown-content :is(th:last-child, td:last-child):not(:where(.not-content *)) {
 	@apply pr-4;
 }
 
@@ -40,16 +38,6 @@
 	margin-top: 0px;
 }
 
-.sl-markdown-content
-	li
-	> :last-child:not(li, ul, ol):not(
-		a,
-		strong,
-		em,
-		del,
-		span,
-		input,
-		:where(.not-content *)
-	) {
+.sl-markdown-content li > :last-child:not(li, ul, ol):not(a, strong, em, del, span, input, :where(.not-content *)) {
 	margin-bottom: 0 !important;
 }
