--- a/packages/oldschoolgg/src/pages/clue-simulator.astro
+++ b/packages/oldschoolgg/src/pages/clue-simulator.astro
@@ -1,5 +1,5 @@
 ---
-import { CluePage } from "@/components/CluePage.js";
+import { CluePage } from "@/components/pages/CluePage.js";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -8,5 +8,5 @@ import Layout from "../layouts/Layout.astro";
 	desc="Oldschool.gg's Clue Simulator lets you simulate opening clue caskets, to see what loot and items you would get, in a real image format."
 	keywords={["clue simulator", "clue", "medium", "casket"]}
 >
-	<CluePage client:load />
+	<CluePage client:only />
 </Layout>
