--- a/docs/src/styles/main.css
+++ b/docs/src/styles/main.css
@@ -10,23 +10,14 @@
 	color: light-dark(var(--dark-brown), #f4ddcb);
 }
 
-/* Inter Font */
 :root {
-	font-family: Inter, sans-serif;
+	font-family: "InterVariable", sans-serif;
 	font-feature-settings:
 		"liga" 1,
 		"calt" 1;
-	--sl-font: "Inter", sans-serif;
-	--font-display: "Inter", sans-serif;
-	--font-sans: "Inter", sans-serif;
-}
-@supports (font-variation-settings: normal) {
-	:root {
-		font-family: "InterVariable", sans-serif;
-		--sl-font: "InterVariable", sans-serif;
-		--font-display: "InterVariable", sans-serif;
-		--font-sans: "Inter", sans-serif;
-	}
+	--sl-font: "InterVariable", sans-serif;
+	--font-display: "InterVariable", sans-serif;
+	--font-sans: "InterVariable", sans-serif;
 }
 
 :root {
@@ -40,7 +31,7 @@
 	--verydark-brown: #100e0c;
 
 	--sl-nav-pad-x: 1rem;
-	--sl-font: "Inter", sans-serif;
+	--sl-font: "InterVariable", sans-serif;
 	--sl-content-width: 55rem;
 	--sl-color-hairline-light: rgba(0, 0, 0, 0);
 
