--- a/packages/oldschoolgg/src/components/astro/Header.astro
+++ b/packages/oldschoolgg/src/components/astro/Header.astro
@@ -1,4 +1,5 @@
 ---
+import { UserMenu } from "@/components/auth/User.jsx";
 import NavLinks from "./NavLinks.astro";
 
 interface LinkChild {
@@ -7,14 +8,19 @@ interface LinkChild {
 	color?: string;
 }
 
-interface Link {
+interface NormalLink {
 	label: string;
 	href?: string;
 	color?: string;
 	children?: LinkChild[];
 }
 
-const links: Link[] = [{ label: "Wiki", href: "https://wiki.oldschool.gg/" }];
+type Link = NormalLink;
+
+const links: Link[] = [
+	{ label: "Wiki", href: "https://wiki.oldschool.gg/" },
+	{ label: "Login", href: "/login" },
+];
 ---
 
 <header class="w-full backdrop-blur-md py-4">
@@ -45,22 +51,14 @@ const links: Link[] = [{ label: "Wiki", href: "https://wiki.oldschool.gg/" }];
 
 			<div class="hidden lg:flex items-center gap-8 font-semibold">
 				<NavLinks links={links} />
+				<UserMenu client:load />
 			</div>
-
-			<!-- <div class="hidden lg:flex items-center gap-4">
-				<Button size="sm" variant="discord" href="/login"
-					>Login With Discord</Button
-				>
-			</div> -->
 		</nav>
 
 		<!-- Mobile Menu -->
 		<div id="mobile-menu" class="hidden lg:hidden mt-4 pb-4 border-t pt-4">
 			<div class="flex flex-col gap-4">
 				<NavLinks links={links} mobile={true} />
-				<!-- <Button size="sm" variant="discord" href="/login"
-					>Login With Discord</Button
-				> -->
 			</div>
 		</div>
 	</div>
