--- a/packages/oldschoolgg/src/layouts/Layout.astro
+++ b/packages/oldschoolgg/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import { ClientRouter } from "astro:transitions";
-import Header from "../components/astro/Header.astro";
+import Header from "../components/astro/Header";
 import "../styles/global.css";
 
 const defaultTitle = "Oldschool.gg";
@@ -56,7 +56,7 @@ const { pageTitle, desc, keywords, image, url } = Astro.props;
 		<ClientRouter />
 	</head>
 	<body class="dark">
-		<Header />
+		<Header client:visible />
 		<main class="z-10 relative">
 			{
 				pageTitle && (
