--- a/packages/oldschoolgg/src/pages/staff/index.astro
+++ b/packages/oldschoolgg/src/pages/staff/index.astro
@@ -1,9 +1,3 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+return Astro.redirect('/account/staff');
 ---
-
-<Layout>
-    <a class="link" href="/staff/economy-transactions"
-        >Economy Transactions Page</a
-    >
-</Layout>
