--- a/packages/oldschoolgg/src/pages/account.astro
+++ b/packages/oldschoolgg/src/pages/account.astro
@@ -1,8 +1,3 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import { AccountPage } from "@/components/pages/Account.jsx";
+return Astro.redirect('/account/minion-info');
 ---
-
-<Layout>
-    <AccountPage client:only />
-</Layout>
