--- a/packages/oldschoolgg/src/pages/staff/economy-transactions.astro
+++ b/packages/oldschoolgg/src/pages/staff/economy-transactions.astro
@@ -1,8 +1,3 @@
 ---
-import Layout from "@/layouts/Layout.astro";
-import { EconomyTransactionsPage } from "@/components/Staff/EconomyTransactions/EconomyTransactions.jsx";
+return Astro.redirect('/account/staff/economy-transactions');
 ---
-
-<Layout>
-    <EconomyTransactionsPage client:only />
-</Layout>
